data/derived/comb/progs/unify/prog0664.ml.out
Characters 56-70:
  "[" ^ (List.map g l) "]";;
        ^^^^^^^^^^^^^^
Error: This expression has type string list
       This is not a function; it cannot be applied.
